fix TestHotSpotJVMCIRuntime